--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,12 +26,12 @@ phases:
       - echo Pushing the Docker images...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo "configure ecs task definition file"
+      - sed -i "s@{{AWS_ACCOUNT_ID}}@${AWS_ACCOUNT_ID}@g" task-definition.json
+      - sed -i "s@{{AWS_REGION}}@${AWS_REGION}@g" task-definition.json
+      - sed -i "s@{{APPLICATION_NAME_1}}@hello-world@g" task-definition.json
+      - sed -i "s@{{APPLICATION_NAME_2}}@hello-world2@g" task-definition.json
       - echo Writing image definitions file...
-      - printf '[{"name":"hello-world","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-      # - echo "configure ecs task definition file"
-      # - sed -i "s@{{AWS_ACCOUNT_ID}}@${AWS_ACCOUNT_ID}@g" task-definition.json
-      # - sed -i "s@{{AWS_REGION}}@${AWS_REGION}@g" task-definition.json
-      # - sed -i "s@{{APPLICATION_NAME_1}}@${APPLICATION_NAME_1}@g" task-definition.json
-      # - sed -i "s@{{APPLICATION_NAME_2}}@${APPLICATION_NAME_2}@g" task-definition.json
+      - printf '[{"name":"hello-world","imageUri":"%s"},{"name":"hello-world2","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json # name should be name of container in task definition
 artifacts:
     files: imagedefinitions.json
