--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,8 @@ phases:
       docker: 19
   pre_build:
     commands:
+      - echo nslookup
+      - nslookup testing-ca-074598670345.d.codeartifact.us-east-2.amazonaws.com
       - echo Logging in to Amazon ECR...
       - aws --version
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
